@@ -10,6 +10,7 @@
 * Search indicators are configurable now per skin.
 * Make Ctrl+PgUp going to the previous tab while Ctrl+PgDwn to the next
 * New feature: ui configurable monospaced font
+* Fix: opening another user (read only) project now works
 
 2013 Jun 29 Sergey Satskiy <sergey.satskiy@gmail.com>
 
